--- a/ZatcaIntegration.csproj
+++ b/ZatcaIntegration.csproj
@@ -44,9 +44,9 @@
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
-    <Reference Include="ZatcaIntegrationSDK, Version=1.0.8328.23456, Culture=neutral, processorArchitecture=MSIL">
+    <Reference Include="ZatcaIntegrationSDK, Version=1.0.8329.43146, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\ZatcaIntegrationSDK\bin\Debug\ZatcaIntegrationSDK.dll</HintPath>
+      <HintPath>bin\Debug\ZatcaIntegrationSDK.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
